Widened footer; stuck learn nav to the top; fixed top nav at medium size

--- a/assets/css/notebook.css
+++ b/assets/css/notebook.css
@@ -3946,7 +3946,6 @@ ul.typeahead-list  > li > a.pull-right {
 /* Overrides of notebook CSS for static HTML export */
 body {
     overflow: visible;
-    padding: 8px;
 }
 
 div#notebook {
